--- a/.github/workflows/FindTheEarliestCommit.yml
+++ b/.github/workflows/FindTheEarliestCommit.yml
@@ -1,4 +1,4 @@
-name: Test flink commit: ccdf270fc91177ccf5952613f8a6894449d2b0a2 Date:Tue Feb 1 15:10:37 2022
+name: Test flink commit ccdf270fc91177ccf5952613f8a6894449d2b0a2 Date:Tue Feb 1 15:10:37 2022
 
 on: [push]
 
