--- a/.github/workflows/FindTheEarliestCommit.yml
+++ b/.github/workflows/FindTheEarliestCommit.yml
@@ -1,4 +1,4 @@
-name: Test flink commit 4d9de6c5b826ab482f47f33c8da957ac9b550c32 Date Fri Oct 15 11:52:37 2021
+name: Test flink commit 25dc6eacd38bd7a70883fc8e54f0bec8dc5861c0 Date Fri Sat Oct 9 18:08:47 2021
 
 on: [push]
 
@@ -25,8 +25,8 @@ jobs:
       - name: maven NonDex
         run: mvn install
         working-directory: NonDex
-      - name: check out 4d9de6c5b826ab482f47f33c8da957ac9b550c32
-        run: git checkout 4d9de6c5b826ab482f47f33c8da957ac9b550c32
+      - name: check out 25dc6eacd38bd7a70883fc8e54f0bec8dc5861c0
+        run: git checkout 25dc6eacd38bd7a70883fc8e54f0bec8dc5861c0
         working-directory: flink
       - name: Set up JDK 11
         uses: actions/setup-java@v3
