--- a/.github/workflows/FindTheEarliestCommit.yml
+++ b/.github/workflows/FindTheEarliestCommit.yml
@@ -1,4 +1,4 @@
-name: Test flink commit 25dc6eacd38bd7a70883fc8e54f0bec8dc5861c0 Date Fri Sat Oct 9 18:08:47 2021
+name: Test flink commit e57fc343e1d0e6dfb0acd897335e9a70f2901cf7 Date Mon Sep 27 15:21:56 2021
 
 on: [push]
 
@@ -25,8 +25,8 @@ jobs:
       - name: maven NonDex
         run: mvn install
         working-directory: NonDex
-      - name: check out 25dc6eacd38bd7a70883fc8e54f0bec8dc5861c0
-        run: git checkout 25dc6eacd38bd7a70883fc8e54f0bec8dc5861c0
+      - name: check out e57fc343e1d0e6dfb0acd897335e9a70f2901cf7
+        run: git checkout e57fc343e1d0e6dfb0acd897335e9a70f2901cf7
         working-directory: flink
       - name: Set up JDK 11
         uses: actions/setup-java@v3
