--- a/.github/workflows/FindTheEarliestCommit.yml
+++ b/.github/workflows/FindTheEarliestCommit.yml
@@ -1,4 +1,4 @@
-name: Test flink commit 26de0faab65dfdc08d91393824944ca2fd43fb9b Tue Jun 18 11:57:27 2019
+name: Test flink commit e6ba90c311f41f341f96cfeda5963e65b9b71fd0 Wed Jun 12 18:00:41 2019 4259546
 
 on: [push]
 
@@ -19,8 +19,8 @@ jobs:
       - name: maven NonDex
         run: mvn install
         working-directory: NonDex
-      - name: check out 26de0faab65dfdc08d91393824944ca2fd43fb9b
-        run: git checkout 26de0faab65dfdc08d91393824944ca2fd43fb9b
+      - name: check out e6ba90c311f41f341f96cfeda5963e65b9b71fd0
+        run: git checkout e6ba90c311f41f341f96cfeda5963e65b9b71fd0
         working-directory: flink
       - name: compile the module where the test is, and all modules it depends on
         run: mvn test-compile -pl flink-libraries/flink-cep -am -e
